syntax = "proto3";
package violetSolver.recorder;

// recorded once in head of the log file
message LogHeader {
    string log_schema_version = 1;
    string avatar_name = 2;
    string avatar_version = 3;
}

// recorded in each of frame
message LogFrameData {
    double timestamp_ms = 1;
    uint32 frame_number = 2;
    AvatarPose avatar_pose = 3;
    DeviceUsage device_usage = 4;
}

message Rotation {
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

message Position {
    float x = 1;
    float y = 2;
    float z = 3;
}

message BoneTransform{
    int32 bone_type_value = 1;
    string bone_name = 2;
    Rotation local_rotation = 3;
    Position local_position = 4;
}

message AvatarPose{
    repeated BoneTransform bone_transforms = 1;
    Blendshapes blendshapes = 2;
}

message Blendshapes {
  repeated float weights = 1;
  enum BlendshapesIndex {
    _neutral = 0;
    browDownLeft = 1;
    browDownRight = 2;
    browInnerUp = 3;
    browOuterUpLeft = 4;
    browOuterUpRight = 5;
    cheekPuff = 6;
    cheekSquintLeft = 7;
    cheekSquintRight = 8;
    eyeBlinkLeft = 9;
    eyeBlinkRight = 10;
    eyeLookDownLeft = 11;
    eyeLookDownRight = 12;
    eyeLookInLeft = 13;
    eyeLookInRight = 14;
    eyeLookOutLeft = 15;
    eyeLookOutRight = 16;
    eyeLookUpLeft = 17;
    eyeLookUpRight = 18;
    eyeSquintLeft = 19;
    eyeSquintRight = 20;
    eyeWideLeft = 21;
    eyeWideRight = 22;
    jawForward = 23;
    jawLeft = 24;
    jawOpen = 25;
    jawRight = 26;
    mouthClose = 27;
    mouthDimpleLeft = 28;
    mouthDimpleRight = 29;
    mouthFrownLeft = 30;
    mouthFrownRight = 31;
    mouthFunnel = 32;
    mouthLeft = 33;
    mouthLowerDownLeft = 34;
    mouthLowerDownRight = 35;
    mouthPressLeft = 36;
    mouthPressRight = 37;
    mouthPucker = 38;
    mouthRight = 39;
    mouthRollLower = 40;
    mouthRollUpper = 41;
    mouthShrugLower = 42;
    mouthShrugUpper = 43;
    mouthSmileLeft = 44;
    mouthSmileRight = 45;
    mouthStretchLeft = 46;
    mouthStretchRight = 47;
    mouthUpperUpLeft = 48;
    mouthUpperUpRight = 49;
    noseSneerLeft = 50;
    noseSneerRight = 51;
    tongueOut = 52;
    length = 53;
  }
}

message DeviceUsage {
    bool is_mouse_using = 1;
    bool is_keyboard_using = 2;
}
